--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="El generador de lorem ipsum en perroflautés"
     />
+    <link href="%REACT_APP_RESOURCES_LINK%/fonts.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
